--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-carousel-minimal": "^1.4.1",
     "react-countup": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-player": "^2.9.0",
+    "react-responsive-carousel": "^3.2.22",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
