--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "react-player": "^2.9.0",
     "react-responsive-carousel": "^3.2.22",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.0",
     "react-visibility-sensor": "^5.1.1",
     "react-youtube": "^7.13.1",
     "vanta": "^0.5.21",
