--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-countup": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-parallax": "^3.3.0",
     "react-player": "^2.9.0",
     "react-responsive-carousel": "^3.2.22",
     "react-reveal": "^1.2.2",
